--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,7 @@
-<div *ngIf="2<1">
+<div *ngIf="2>1">
 yes 2 is greater than 1
+</div>
+
+<div *ngIf="someRandomVariable">
+  yes variable is present
 </div>
