--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,3 +5,6 @@ yes 2 is greater than 1
 <div *ngIf="someRandomVariable">
   yes variable is present
 </div>
+<div *ngIf="!someRandomVariable">
+  no variable is absent
+</div>
