--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -19,9 +19,9 @@ yes 2 is greater than 1
 
 </div>
 <ng-template #falseBlock>
-  <h2>NO</h2>
+  <h2>NO no variable is absent</h2>
 </ng-template>
 
 <ng-template #trueBlock>
-  <h2>YES</h2>
+  <h2>YES variable is present</h2>
 </ng-template>
