--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -40,5 +40,5 @@ yes 2 is greater than 1
   <div *ngSwitchCase="'blue'">you picked blue</div>
   <div *ngSwitchCase="'green'">you picked green</div>
 
-
+<div *ngSwitchDefault>pick again</div>
 </div>
