--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -42,3 +42,9 @@ yes 2 is greater than 1
 
 <div *ngSwitchDefault>pick again</div>
 </div>
+
+<h2>Using ngFor</h2>
+<div *ngFor="let color of colors;index as i">
+<h2>{{i}} {{color}}</h2>
+
+</div>
