--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -44,7 +44,7 @@ yes 2 is greater than 1
 </div>
 <hr>
 <h2>Using ngFor</h2>
-<div *ngFor="let color of colors;index as i">
+<div *ngFor="let color of colors;index as i;first as f">
 <h2>{{i}} {{color}}</h2>
 
 </div>
