--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -45,7 +45,7 @@ yes 2 is greater than 1
 <hr>
 <h2>Using ngFor</h2>
 <div *ngFor="let color of colors;index as i;first as f">
-<h2>{{i}} {{color}}</h2>
+<h2>{{i}} {{f}} {{color}}</h2>
 
 </div>
 <hr>
