--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -44,8 +44,8 @@ yes 2 is greater than 1
 </div>
 <hr>
 <h2>Using ngFor</h2>
-<div *ngFor="let color of colors;index as i;first as f">
-<h2>{{i}} {{f}} {{color}}</h2>
+<div *ngFor="let color of colors;index as i;first as f;last as l;odd as o;even as e">
+<h2>{{i}} {{f}} {{l}} {{o}} {{e}} {{color}}</h2>
 
 </div>
 <hr>
