--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -49,3 +49,5 @@ yes 2 is greater than 1
 
 </div>
 <hr>
+<h2>ngClass directive</h2>
+<p [ngClass]="{classOne:cone,classTwo:ctwo}">ngClass paragraph</p>
