--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -51,3 +51,4 @@ yes 2 is greater than 1
 <hr>
 <h2>ngClass directive</h2>
 <p [ngClass]="{classOne:cone,classTwo:ctwo}">ngClass paragraph</p>
+<button (click)="toggle()">toggle</button>
