--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -52,3 +52,6 @@ yes 2 is greater than 1
 <h2>ngClass directive</h2>
 <p [ngClass]="{classOne:cone,classTwo:ctwo}">ngClass paragraph</p>
 <button (click)="toggle()">toggle</button>
+
+<p [ngStyle]="{'font-style':style,'font-size':size}">ngStyle paragraph</p>
+<hr>
