--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -53,5 +53,6 @@ yes 2 is greater than 1
 <p [ngClass]="{classOne:cone,classTwo:ctwo}">ngClass paragraph</p>
 <button (click)="toggle()">toggle</button>
 
+<h2>ngStyle directive</h2>
 <p [ngStyle]="{'font-style':style,'font-size':size}">ngStyle paragraph</p>
 <hr>
