--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -56,3 +56,9 @@ yes 2 is greater than 1
 <h2>ngStyle directive</h2>
 <p [ngStyle]="{'font-style':style,'font-size':size}">ngStyle paragraph</p>
 <hr>
+
+
+<h2>ngModel directive</h2>
+<input ([ngModel])="name" type="text">
+{{name}}
+<hr>
