--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -59,5 +59,5 @@ yes 2 is greater than 1
 
 
 <h2>ngModel directive</h2>
-<input ([ngModel])="name" type="text"> {{name}}
+<input [(ngModel)]="name" type="text"> {{name}}
 <hr>
